--- a/_souces/css/main.css
+++ b/_souces/css/main.css
@@ -57,6 +57,14 @@ button {
     padding: 1em;
     background-color: #e72854;
     border: none;
+    cursor: pointer;
+}
+
+.bouton:hover,
+[type="submit"]:hover,
+[type="reset"]:hover,
+button:hover {
+    background-color: #6bbbda;
 }
 
 /********** STYLE HEADER *********/
@@ -134,10 +142,16 @@ footer {
     margin-bottom: 2rem;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
+    background-color: #e72854;
 }
 
 .page-accueil .sabres li:hover {
-    box-shadow: 0 0.03rem 0.06rem rgba(0, 0, 0, 0.6), 0 0.1rem 0.3rem rgba(0, 0, 0, 0.6);;
+    box-shadow: 0 0.03rem 0.06rem rgba(0, 0, 0, 0.6), 0 0.1rem 0.3rem rgba(0, 0, 0, 0.6);
+    background-color: #6bbbda;
+}
+
+.page-accueil .sabres li.rupture {
+    background-color: #27282a;
 }
 
 .page-accueil .sabres figure {
@@ -148,12 +162,8 @@ footer {
 .page-accueil .sabres figcaption {
     padding: 1rem;
     color: white;
-    background-color: #e72854;
 }
 
-.page-accueil .sabres li:hover figcaption {
-    background-color: #6bbbda;
-}
 
 /********** STYLE PAGE SERVICE CLIENTS *********/
 .page-service-client main {
@@ -186,11 +196,21 @@ footer {
     margin: 0 auto;
 }
 
+.page-sabre .sabre img {
+    border: 6px solid #e72854;
+}
+
 .page-sabre ul.details {
-    padding-left: 1em;
+    list-style-type: none;
+    padding: 0;
     margin: 1rem 0;
+    font-size: 1.1rem;
 }
 
 .page-sabre ul.details li {
-    padding: .25em 0;
+    padding: .5em 1em;
+}
+
+.page-sabre ul.details li:nth-child(odd) {
+    background-color: #eeeeee;
 }
