--- a/_souces/css/main.css
+++ b/_souces/css/main.css
@@ -1,7 +1,6 @@
+@import "normalize.css";
+
 /********** STYLE GENERAL *********/
-/******************
-GENERAL
-******************/
 * {
     box-sizing: border-box;
 }
@@ -78,7 +77,7 @@ header {
     gap: 20px;
 }
 
-header .logo img {
+header .logo {
     max-height: 150px;
 }
 
@@ -166,8 +165,9 @@ footer {
 
 
 /********** STYLE PAGE SERVICE CLIENTS *********/
-.page-service-client main {
+.page-service-client {
     max-width: 660px;
+    margin: 0 auto;
 }
 .page-service-client .manuels {
     margin: 2rem 0;
