intégration CSS dans composants

--- a/_souces/css/main.css
+++ b/_souces/css/main.css
@@ -129,10 +129,9 @@ footer {
     align-content: space-evenly;
     justify-content: center;
     padding: 0;
-    list-style: none;
 }
 
-.page-accueil .sabres li {
+.page-accueil .sabres .sabre {
     overflow: hidden;
     flex: 2 0 300px;
     padding: 0;
@@ -144,21 +143,21 @@ footer {
     background-color: #e72854;
 }
 
-.page-accueil .sabres li:hover {
+.page-accueil .sabres .sabre:hover {
     box-shadow: 0 0.03rem 0.06rem rgba(0, 0, 0, 0.6), 0 0.1rem 0.3rem rgba(0, 0, 0, 0.6);
     background-color: #6bbbda;
 }
 
-.page-accueil .sabres li.rupture {
+.page-accueil .sabres .sabre.rupture {
     background-color: #27282a;
 }
 
-.page-accueil .sabres figure {
+.page-accueil .sabres .sabre figure {
     padding: 0;
     margin: 0;
 }
 
-.page-accueil .sabres figcaption {
+.page-accueil .sabres .sabre figcaption {
     padding: 1rem;
     color: white;
 }
